improved ui to look better