@@ -49,6 +49,7 @@
       <scope>compile</scope>
     </dependency>
 
+
     <!-- Jakarta CDI (Contexts and Dependency Injection) -->
     <dependency>
       <groupId>jakarta.enterprise</groupId>
@@ -82,7 +83,7 @@
     <dependency>
       <groupId>com.sun.mail</groupId>
       <artifactId>jakarta.mail</artifactId>
-      <version>2.0.1</version>
+      <version>2.0.2</version>
     </dependency>
 
     <!-- Reflections for annotation scanning -->
@@ -103,14 +104,21 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.5.0</version>
+      <version>1.5.13</version>
     </dependency>
 
     <!-- Logback Core -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
-      <version>1.5.0</version>
+      <version>1.5.25</version>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.jms</groupId>
+      <artifactId>jakarta.jms-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
@@ -138,6 +146,15 @@
           <username>admin</username>
           <password>admin123</password>
           <protocol>http-remoting</protocol>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
